# backend-documents

./: README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/dto/: file.py  webhook.py
src/api/utils/: size.py
src/api/v1/: binding.py  docs.py  documents.py
src/api/v1/swagger/: html.py  render.py
src/db/: declarative.py
src/db/migrations/: env.py
src/db/migrations/versions/: 3f2f4257a6d9_first_commit.py
src/db/repositories/: base.py  documents.py
src/db/tables/: __init__.py  documents.py
src/di/: dependencies.py  factory.py  markers.py  providers.py
src/services/: minio.py
src/services/http/: base.py  core.py  minio.py
src/services/http/errors/: errors.py
src/settings/: application.py  minio.py  postgres.py
